fix(GemsPlugin): actually fix the plugin instance this time

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,2 +1,10 @@
+# MySQL configuration
+host: "localhost"
+port: 3306
+database: "database"
+username: "username"
+password: "password"
+
+# Settings
 decimal-points: 1
 currency-name: "Gems"
