fix: fix mysql bug

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,5 @@ name: GemsPlugin
 version: '${project.version}'
 main: dev.hepno.gemsplugin.GemsPlugin
 api-version: 1.19
+softdepend:
+  - PlaceholderAPI
